--- a/SAFEplus/SAFE.Datos/SAFE.Datos.csproj
+++ b/SAFEplus/SAFE.Datos/SAFE.Datos.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="BD\base de datos.txt" />
+    <Content Include="BD\Scriptbd.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
