--- a/SAFEplus/SAFE.Negocios/SAFE.Negocios.csproj
+++ b/SAFEplus/SAFE.Negocios/SAFE.Negocios.csproj
@@ -121,9 +121,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Capacitacion.cs" />
     <Compile Include="Cargo.cs" />
     <Compile Include="Cliente.cs" />
+    <Compile Include="Material_Capacitaciones.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Trabajador.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
