--- a/SAFEplus/SAFE.Negocios/SAFE.Negocios.csproj
+++ b/SAFEplus/SAFE.Negocios/SAFE.Negocios.csproj
@@ -124,8 +124,11 @@
     <Compile Include="Capacitacion.cs" />
     <Compile Include="Cargo.cs" />
     <Compile Include="Cliente.cs" />
+    <Compile Include="Contrato.cs" />
     <Compile Include="Material_Capacitaciones.cs" />
+    <Compile Include="Material_Solicitado.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tipo_Contacto.cs" />
     <Compile Include="Trabajador.cs" />
   </ItemGroup>
   <ItemGroup>
