--- a/SAFEplus/SAFE.Presentacion/SAFE.Presentacion.csproj
+++ b/SAFEplus/SAFE.Presentacion/SAFE.Presentacion.csproj
@@ -135,12 +135,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Ayuda.xaml.cs">
+      <DependentUpon>Ayuda.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Menu.xaml.cs">
       <DependentUpon>Menu.xaml</DependentUpon>
     </Compile>
     <Compile Include="RegistroClientes.xaml.cs">
       <DependentUpon>RegistroClientes.xaml</DependentUpon>
     </Compile>
+    <Page Include="Ayuda.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
