--- a/SAFEplus/SAFE.Presentacion/SAFE.Presentacion.csproj
+++ b/SAFEplus/SAFE.Presentacion/SAFE.Presentacion.csproj
@@ -144,6 +144,9 @@
     <Compile Include="RegistroClientes.xaml.cs">
       <DependentUpon>RegistroClientes.xaml</DependentUpon>
     </Compile>
+    <Compile Include="VistaCliente.xaml.cs">
+      <DependentUpon>VistaCliente.xaml</DependentUpon>
+    </Compile>
     <Page Include="Ayuda.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -165,6 +168,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="RegistroClientes.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="VistaCliente.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -216,6 +223,9 @@
   <ItemGroup>
     <Resource Include="Imagenes\flecha-izquierda.png" />
     <Resource Include="Imagenes\pregunta.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Imagenes\cerrar-sesion.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
