--- a/SAFEplus/SAFE.Datos/SAFE.Datos.csproj
+++ b/SAFEplus/SAFE.Datos/SAFE.Datos.csproj
@@ -140,16 +140,37 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ACCIDENTE.cs">
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ACCOUNT_USERPROFILE.cs">
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="ANTECEDENTES_ASESORIA.cs">
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="ASESORIA.cs">
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AUTH_GROUP.cs">
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AUTH_GROUP_PERMISSIONS.cs">
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AUTH_PERMISSION.cs">
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AUTH_USER.cs">
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AUTH_USER_GROUPS.cs">
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AUTH_USER_USER_PERMISSIONS.cs">
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="CAPACITACION.cs">
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="CARGO.cs">
       <DependentUpon>SafePlusEDM.tt</DependentUpon>
@@ -158,26 +179,56 @@
       <DependentUpon>SafePlusEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="CONTRATO.cs">
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DjangoEDM.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DjangoEDM.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DjangoEDM.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DjangoEDM.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DjangoEDM.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="DJANGO_ADMIN_LOG.cs">
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DJANGO_CONTENT_TYPE.cs">
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DJANGO_MIGRATIONS.cs">
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DJANGO_SESSION.cs">
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="INFORME_VISITA.cs">
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="MATERIAL_CAPACITACIONES.cs">
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="MATERIAL_SOLICITADO.cs">
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="MATERIAL_SOLICITADO_ID_MAT9F2C.cs">
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="MULTA.cs">
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="REGISTRO_ACCIDENTADOS.cs">
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="REGISTRO_PAGOS.cs">
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="SafePlusEDM.Context.cs">
       <AutoGen>True</AutoGen>
@@ -195,20 +246,30 @@
       <DependentUpon>SafePlusEDM.edmx</DependentUpon>
     </Compile>
     <Compile Include="TIPO_ACCIDENTE.cs">
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="TIPO_CONTRATO.cs">
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="TRABAJADOR.cs">
       <DependentUpon>SafePlusEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="VISITA_TERRENO.cs">
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
+      <DependentUpon>DjangoEDM.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="BD\Scriptbd.sql" />
+    <Content Include="DjangoEDM.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DjangoEDM.edmx</DependentUpon>
+      <LastGenOutput>DjangoEDM.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="DjangoEDM.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DjangoEDM.edmx</DependentUpon>
+      <LastGenOutput>DjangoEDM.cs</LastGenOutput>
+    </Content>
     <Content Include="SafePlusEDM.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>SafePlusEDM.edmx</DependentUpon>
@@ -222,6 +283,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <EntityDeploy Include="DjangoEDM.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>DjangoEDM.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="DjangoEDM.edmx.diagram">
+      <DependentUpon>DjangoEDM.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <EntityDeploy Include="SafePlusEDM.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
