--- a/SAFEplus/SAFE.Datos/SAFE.Datos.csproj
+++ b/SAFEplus/SAFE.Datos/SAFE.Datos.csproj
@@ -140,163 +140,113 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ACCIDENTE.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="ACCOUNT_USERPROFILE.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ANTECEDENTES_ASESORIA.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="ASESORIA.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="AUTH_GROUP.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="AUTH_GROUP_PERMISSIONS.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="AUTH_PERMISSION.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="AUTH_USER.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="AUTH_USER_GROUPS.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="AUTH_USER_USER_PERMISSIONS.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="CAPACITACION.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
-    </Compile>
-    <Compile Include="CARGO.cs">
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
-    </Compile>
-    <Compile Include="CLIENTE.cs">
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="CONTRATO.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
-    <Compile Include="DjangoEDM.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DjangoEDM.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="DjangoEDM.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
-    </Compile>
-    <Compile Include="DjangoEDM.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DjangoEDM.edmx</DependentUpon>
+    <Compile Include="COSTO_ADICIONAL.cs">
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="DJANGO_ADMIN_LOG.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="DJANGO_CONTENT_TYPE.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="DJANGO_MIGRATIONS.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="DJANGO_SESSION.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="FISCALIZACION.cs">
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="INFORME_VISITA.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="MATERIAL_CAPACITACIONES.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="MATERIAL_SOLICITADO.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
-    </Compile>
-    <Compile Include="MATERIAL_SOLICITADO_ID.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="MULTA.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="REGISTRO_ACCIDENTADOS.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
-    </Compile>
     <Compile Include="REGISTRO_PAGOS.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
-    <Compile Include="SafePlusEDM.Context.cs">
+    <Compile Include="SafeDjangoEDM.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>SafePlusEDM.Context.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="SafePlusEDM.cs">
+    <Compile Include="SafeDjangoEDM.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
-    <Compile Include="SafePlusEDM.Designer.cs">
+    <Compile Include="SafeDjangoEDM.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>SafePlusEDM.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="TIPO_ACCIDENTE.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TIPO_CONTRATO.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TRABAJADOR.cs">
-      <DependentUpon>SafePlusEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.edmx</DependentUpon>
     </Compile>
     <Compile Include="VISITA_TERRENO.cs">
-      <DependentUpon>DjangoEDM.tt</DependentUpon>
+      <DependentUpon>SafeDjangoEDM.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="BD\Scriptbd.sql" />
-    <Content Include="DjangoEDM.Context.tt">
+    <Content Include="SafeDjangoEDM.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>DjangoEDM.edmx</DependentUpon>
-      <LastGenOutput>DjangoEDM.Context.cs</LastGenOutput>
+      <DependentUpon>SafeDjangoEDM.edmx</DependentUpon>
+      <LastGenOutput>SafeDjangoEDM.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="DjangoEDM.tt">
+    <Content Include="SafeDjangoEDM.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>DjangoEDM.edmx</DependentUpon>
-      <LastGenOutput>DjangoEDM.cs</LastGenOutput>
-    </Content>
-    <Content Include="SafePlusEDM.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>SafePlusEDM.edmx</DependentUpon>
-      <LastGenOutput>SafePlusEDM.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="SafePlusEDM.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>SafePlusEDM.edmx</DependentUpon>
-      <LastGenOutput>SafePlusEDM.cs</LastGenOutput>
+      <DependentUpon>SafeDjangoEDM.edmx</DependentUpon>
+      <LastGenOutput>SafeDjangoEDM.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <EntityDeploy Include="DjangoEDM.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>DjangoEDM.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="DjangoEDM.edmx.diagram">
-      <DependentUpon>DjangoEDM.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
-    <EntityDeploy Include="SafePlusEDM.edmx">
+    <EntityDeploy Include="SafeDjangoEDM.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>SafePlusEDM.Designer.cs</LastGenOutput>
+      <LastGenOutput>SafeDjangoEDM.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="SafePlusEDM.edmx.diagram">
-      <DependentUpon>SafePlusEDM.edmx</DependentUpon>
+    <None Include="SafeDjangoEDM.edmx.diagram">
+      <DependentUpon>SafeDjangoEDM.edmx</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
